--- a/app/src/main/res/layout/include_toolbar_note.xml
+++ b/app/src/main/res/layout/include_toolbar_note.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        tools:showIn="@layout/fragment_text_note">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="@layout/fragment_text_note">
 
     <data>
         <import type="sgtmelon.scriptum.R"/>
@@ -17,51 +17,50 @@
     </data>
 
     <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/toolbar_note_parent_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:elevation="@dimen/elevation_0dp">
+        android:id="@+id/toolbar_note_parent_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="@dimen/elevation_8dp"
+        android:stateListAnimator="@null">
 
         <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar_note_content_container"
-                style="?attr/styleToolbar"
-                android:layout_gravity="center"
-                android:paddingLeft="@dimen/layout_8dp"
-                android:paddingRight="@dimen/layout_8dp"
-                app:contentInsetStartWithNavigation="56dp"
-                app:popupTheme="?attr/themePopup">
+            android:id="@+id/toolbar_note_content_container"
+            style="?attr/styleToolbar"
+            app:contentInsetEnd="@dimen/layout_8dp"
+            app:contentInsetStart="@dimen/layout_8dp"
+            app:contentInsetStartWithNavigation="56dp"
+            app:popupTheme="?attr/themePopup">
 
             <HorizontalScrollView
-                    android:id="@+id/toolbar_note_scroll"
-                    style="@style/Container.ToolbarNote.Scroll"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility='@{isDataLoad ? View.VISIBLE : View.INVISIBLE}'>
+                android:id="@+id/toolbar_note_scroll"
+                style="@style/Container.ToolbarNote.Scroll"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility='@{isDataLoad ? View.VISIBLE : View.INVISIBLE}'>
 
                 <FrameLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/layout_24dp"
-                        android:layout_marginRight="@dimen/layout_24dp">
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/layout_24dp">
 
                     <EditText
-                            android:id="@+id/toolbar_note_enter"
-                            style="@style/EditText.ToolbarNote"
-                            android:hint="@string/hint_enter_name"
-                            android:importantForAutofill="noExcludeDescendants"
-                            android:text='@={item.name}'
-                            android:visibility='@{isEditMode ? View.VISIBLE : View.INVISIBLE}'
-                            tools:targetApi="o"
-                            tools:visibility="invisible"/>
+                        android:id="@+id/toolbar_note_enter"
+                        style="@style/EditText.ToolbarNote"
+                        android:hint="@string/hint_enter_name"
+                        android:importantForAutofill="noExcludeDescendants"
+                        android:text='@={item.name}'
+                        android:visibility='@{isEditMode ? View.VISIBLE : View.INVISIBLE}'
+                        tools:targetApi="o"
+                        tools:visibility="invisible"/>
 
                     <!-- Set empty text need for editText may change size -->
                     <TextView
-                            android:id="@+id/toolbar_note_text"
-                            style="@style/Text.ToolbarNote"
-                            android:hint="@string/hint_text_name"
-                            android:text='@{isEditMode ? "" : item.name}'
-                            android:visibility='@{!isEditMode ? View.VISIBLE : View.INVISIBLE}'
-                            tools:text="@string/preview_note_name"/>
+                        android:id="@+id/toolbar_note_text"
+                        style="@style/Text.ToolbarNote"
+                        android:hint="@string/hint_text_name"
+                        android:text='@{isEditMode ? "" : item.name}'
+                        android:visibility='@{!isEditMode ? View.VISIBLE : View.INVISIBLE}'
+                        tools:text="@string/preview_note_name"/>
 
                 </FrameLayout>
 
@@ -70,18 +69,12 @@
         </androidx.appcompat.widget.Toolbar>
 
         <View
-                android:id="@+id/toolbar_note_color_view"
-                style="@style/Image.Color.Horizontal"
-                app:visibleTheme='@{theme}'
-                app:visibleOn='@{Theme.DARK}'
-                tools:background="@color/note_red_dark"
-                tools:visibility="gone"/>
-
-        <View
-                android:id="@+id/toolbar_note_divider_view"
-                style="@style/Divider.Horizontal"
-                app:visibleTheme='@{theme}'
-                app:visibleOn='@{Theme.LIGHT}'/>
+            android:id="@+id/toolbar_note_color_view"
+            style="@style/Image.Color.Horizontal"
+            app:visibleTheme='@{theme}'
+            app:visibleOn='@{Theme.DARK}'
+            tools:background="@color/note_red_dark"
+            tools:visibility="visible"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
