--- a/app/src/main/res/layout/view_loading.xml
+++ b/app/src/main/res/layout/view_loading.xml
@@ -1,39 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/loading_parent_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center"
-        android:paddingLeft="@dimen/layout_24dp"
-        android:paddingStart="@dimen/layout_24dp"
-        android:paddingTop="@dimen/layout_16dp"
-        android:paddingRight="@dimen/layout_24dp"
-        android:paddingEnd="@dimen/layout_24dp"
-        android:paddingBottom="@dimen/layout_16dp">
+    android:id="@+id/loading_parent_container"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:orientation="horizontal"
+    android:paddingVertical="@dimen/layout_16dp"
+    android:paddingHorizontal="@dimen/layout_24dp">
 
     <ProgressBar
-            android:id="@+id/loading_progress_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/layout_8dp"
-            android:layout_marginRight="@dimen/layout_8dp"
-            android:layout_marginStart="@dimen/layout_0dp"
-            android:layout_marginLeft="@dimen/layout_0dp"/>
+        android:id="@+id/loading_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/layout_0dp"
+        android:layout_marginEnd="@dimen/layout_8dp" />
 
     <TextView
-            android:id="@+id/loading_text"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:textAppearance="@style/Appearance.Main"
-            android:textSize="@dimen/text_16sp"
-            android:text="@string/dialog_text_loading"
-            android:layout_marginEnd="@dimen/layout_0dp"
-            android:layout_marginRight="@dimen/layout_0dp"
-            android:layout_marginStart="@dimen/layout_8dp"
-            android:layout_marginLeft="@dimen/layout_8dp"
-            android:paddingEnd="@dimen/layout_24dp"
-            android:paddingStart="@dimen/layout_24dp"/>
+        android:id="@+id/loading_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="@dimen/layout_8dp"
+        android:layout_marginEnd="@dimen/layout_0dp"
+        android:gravity="center"
+        android:paddingStart="@dimen/layout_24dp"
+        android:paddingEnd="@dimen/layout_24dp"
+        android:text="@string/dialog_text_loading"
+        android:textAppearance="@style/Appearance.Main"
+        android:textSize="@dimen/text_16sp" />
 
 </LinearLayout>
