--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -21,10 +21,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="@dimen/layout_4dp"
-        android:paddingLeft="@dimen/layout_4dp"
-        android:paddingEnd="@dimen/layout_4dp"
-        android:paddingRight="@dimen/layout_4dp">
+        android:paddingHorizontal="@dimen/layout_4dp">
 
         <!--  Need container for work properly (it's related with layout_gravity)  -->
         <FrameLayout
