--- a/app/src/main/res/layout/fragment_text_note.xml
+++ b/app/src/main/res/layout/fragment_text_note.xml
@@ -1,78 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="android.view.View"/>
 
-        <variable name="theme" type="int"/>
-        <variable name="menuCallback" type="sgtmelon.scriptum.presentation.screen.ui.callback.note.INoteMenu"/>
-        <variable name="isDataLoad" type="boolean"/>
+        <import type="android.view.View" />
 
-        <variable name="item" type="sgtmelon.scriptum.domain.model.item.NoteItem.Text"/>
-        <variable name="isRankEmpty" type="boolean"/>
-        <variable name="isEditMode" type="boolean"/>
+        <variable
+            name="theme"
+            type="int" />
 
-        <variable name="inputAccess" type="sgtmelon.scriptum.presentation.control.note.input.InputControl.Access"/>
+        <variable
+            name="menuCallback"
+            type="sgtmelon.scriptum.presentation.screen.ui.callback.note.INoteMenu" />
+
+        <variable
+            name="isDataLoad"
+            type="boolean" />
+
+        <variable
+            name="item"
+            type="sgtmelon.scriptum.domain.model.item.NoteItem.Text" />
+
+        <variable
+            name="isRankEmpty"
+            type="boolean" />
+
+        <variable
+            name="isEditMode"
+            type="boolean" />
+
+        <variable
+            name="inputAccess"
+            type="sgtmelon.scriptum.presentation.control.note.input.InputControl.Access" />
     </data>
 
     <LinearLayout
-            android:id="@+id/text_note_parent_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        android:id="@+id/text_note_parent_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <include
-                layout="@layout/include_toolbar_note"
-                app:isDataLoad='@{isDataLoad}'
-                app:isEditMode='@{isEditMode}'
-                app:item='@{item}'
-                app:theme='@{theme}'/>
+            layout="@layout/include_toolbar_note"
+            app:isDataLoad='@{isDataLoad}'
+            app:isEditMode='@{isEditMode}'
+            app:item='@{item}'
+            app:theme='@{theme}' />
 
         <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:paddingTop="@dimen/recycler_margin"
-                android:paddingBottom="@dimen/recycler_margin">
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:paddingTop="@dimen/recycler_margin"
+            android:paddingBottom="@dimen/recycler_margin">
 
             <androidx.cardview.widget.CardView
-                    android:id="@+id/text_note_content_card"
-                    style="@style/Card"
-                    android:layout_height="match_parent"
-                    app:cardBackgroundColor="?attr/clBackgroundView"
-                    app:cardCornerRadius="@dimen/radius_4dp"
-                    app:cardUseCompatPadding="false">
+                android:id="@+id/text_note_content_card"
+                style="@style/Card"
+                android:layout_height="match_parent"
+                app:cardBackgroundColor="?attr/clBackgroundView">
 
                 <ScrollView
-                        android:id="@+id/text_note_content_scroll"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fillViewport="true"
-                        android:visibility='@{isDataLoad ? View.VISIBLE : View.INVISIBLE}'>
+                    android:id="@+id/text_note_content_scroll"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fillViewport="true"
+                    android:visibility='@{isDataLoad ? View.VISIBLE : View.INVISIBLE}'>
 
                     <FrameLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
                         <EditText
-                                android:id="@+id/text_note_content_enter"
-                                style="@style/EditText.TextNote.Enter"
-                                android:hint="@string/hint_enter_text"
-                                android:importantForAutofill="noExcludeDescendants"
-                                android:text='@={item.text}'
-                                android:visibility='@{isEditMode ? View.VISIBLE : View.INVISIBLE}'
-                                tools:targetApi="o"
-                                tools:visibility="invisible"/>
+                            android:id="@+id/text_note_content_enter"
+                            style="@style/EditText.TextNote.Enter"
+                            android:hint="@string/hint_enter_text"
+                            android:importantForAutofill="noExcludeDescendants"
+                            android:text='@={item.text}'
+                            android:visibility='@{isEditMode ? View.VISIBLE : View.INVISIBLE}'
+                            tools:targetApi="o"
+                            tools:visibility="invisible" />
 
                         <!-- Set empty text need for editText may change size -->
                         <TextView
-                                android:id="@+id/text_note_content_text"
-                                style="@style/EditText.TextNote.Read"
-                                android:text='@{isEditMode ? "" : item.text}'
-                                android:visibility='@{!isEditMode ? View.VISIBLE : View.INVISIBLE}'
-                                tools:text="@string/preview_note_text"/>
+                            android:id="@+id/text_note_content_text"
+                            style="@style/EditText.TextNote.Read"
+                            android:text='@{isEditMode ? "" : item.text}'
+                            android:visibility='@{!isEditMode ? View.VISIBLE : View.INVISIBLE}'
+                            tools:text="@string/preview_note_text" />
 
                     </FrameLayout>
 
@@ -83,14 +100,14 @@
         </FrameLayout>
 
         <include
-                layout="@layout/include_note_panel"
-                app:isDataLoad='@{isDataLoad}'
-                app:isEditMode='@{isEditMode}'
-                app:isDividerHide='@{false}'
-                app:inputAccess='@{inputAccess}'
-                app:item='@{item}'
-                app:menuCallback='@{menuCallback}'
-                app:isRankEmpty='@{isRankEmpty}'/>
+            layout="@layout/include_note_panel"
+            app:inputAccess='@{inputAccess}'
+            app:isDataLoad='@{isDataLoad}'
+            app:isDividerHide='@{false}'
+            app:isEditMode='@{isEditMode}'
+            app:isRankEmpty='@{isRankEmpty}'
+            app:item='@{item}'
+            app:menuCallback='@{menuCallback}' />
 
     </LinearLayout>
 
