--- a/app/src/main/res/layout/item_rank.xml
+++ b/app/src/main/res/layout/item_rank.xml
@@ -12,9 +12,7 @@
     <androidx.cardview.widget.CardView
             android:id="@+id/rank_parent_card"
             style="@style/Card"
-            app:cardBackgroundColor="?attr/clBackgroundView"
-            app:cardCornerRadius="@dimen/radius_4dp"
-            app:cardUseCompatPadding="false">
+            app:cardBackgroundColor="?attr/clBackgroundView">
 
         <LinearLayout
                 android:id="@+id/rank_click_container"
@@ -25,17 +23,26 @@
                 android:padding="@dimen/layout_8dp"
                 android:weightSum="1">
 
-            <include
-                    layout="@layout/include_item_rank_button"
-                    app:item='@{item}'/>
+            <sgtmelon.iconanim.widget.SwitchButton
+                android:id="@+id/rank_visible_button"
+                style="@style/Button.Medium"
+                android:layout_marginStart="@dimen/layout_4dp"
+                android:layout_marginEnd="@dimen/layout_8dp"
+                android:contentDescription='@{(item.visible ? @string/description_item_rank_hide : @string/description_item_rank_show) + " " + item.name}'
+                app:srcDisable="@drawable/ic_visible_exit"
+                app:srcDisableAnim="@drawable/anim_visible_exit"
+                app:srcDisableColor="?attr/clContent"
+                app:srcSelect="@drawable/ic_visible_enter"
+                app:srcSelectAnim="@drawable/anim_visible_enter"
+                app:srcSelectColor="?attr/clAccent"
+                tools:srcCompat="@drawable/ic_visible_enter"
+                tools:tint="@color/accent_dark"/>
 
             <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/layout_4dp"
-                    android:layout_marginLeft="@dimen/layout_4dp"
                     android:layout_marginEnd="@dimen/layout_4dp"
-                    android:layout_marginRight="@dimen/layout_4dp"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
@@ -91,9 +98,7 @@
                     android:id="@+id/rank_cancel_button"
                     style="@style/Button.Medium"
                     android:layout_marginStart="@dimen/layout_8dp"
-                    android:layout_marginLeft="@dimen/layout_8dp"
                     android:layout_marginEnd="@dimen/layout_4dp"
-                    android:layout_marginRight="@dimen/layout_4dp"
                     android:contentDescription='@{@string/description_item_rank_cancel + " " + item.name}'
                     android:tint="?attr/clContent"
                     app:srcCompat="@drawable/ic_cancel_enter"/>
