--- a/app/src/main/res/layout/item_roll_read.xml
+++ b/app/src/main/res/layout/item_roll_read.xml
@@ -16,9 +16,7 @@
     <androidx.cardview.widget.CardView
             android:id="@+id/roll_read_parent_card"
             style="@style/Card"
-            app:cardBackgroundColor="?attr/clBackgroundView"
-            app:cardCornerRadius="@dimen/radius_4dp"
-            app:cardUseCompatPadding="false">
+            app:cardBackgroundColor="?attr/clBackgroundView">
 
         <LinearLayout
                 android:layout_width="match_parent"
