--- a/app/src/main/res/layout/view_volume.xml
+++ b/app/src/main/res/layout/view_volume.xml
@@ -1,30 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="@dimen/layout_24dp"
-        android:paddingTop="@dimen/layout_16dp"
-        android:paddingRight="@dimen/layout_24dp"
-        tools:layout_gravity="center">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingHorizontal="@dimen/layout_24dp"
+    android:paddingTop="@dimen/layout_16dp"
+    tools:layout_gravity="center">
 
     <TextView
-            android:id="@+id/volume_progress_text"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:paddingBottom="@dimen/layout_8dp"
-            android:textColor="?attr/clContentSecond"
-            android:textSize="@dimen/text_16sp"
-            tools:text="12%"/>
+        android:id="@+id/volume_progress_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:paddingBottom="@dimen/layout_8dp"
+        android:textColor="?attr/clContentSecond"
+        android:textSize="@dimen/text_16sp"
+        tools:text="12%" />
 
     <SeekBar
-            android:id="@+id/volume_seek_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:max="100"
-            tools:progress="75"/>
+        android:id="@+id/volume_seek_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:max="100"
+        tools:progress="75" />
 
 </LinearLayout>
