--- a/app/src/main/res/values/dimens_app.xml
+++ b/app/src/main/res/values/dimens_app.xml
@@ -20,6 +20,7 @@
 
     <dimen name="elevation_0dp">0dp</dimen>
     <dimen name="elevation_4dp">4dp</dimen>
+    <dimen name="elevation_8dp">8dp</dimen>
 
     <dimen name="radius_2dp">2dp</dimen>
     <dimen name="radius_4dp">4dp</dimen>
