--- a/app/src/main/res/values/styles_element.xml
+++ b/app/src/main/res/values/styles_element.xml
@@ -12,10 +12,9 @@
         <item name="android:layout_marginTop">@dimen/card_margin_vertical</item>
         <item name="android:layout_marginBottom">@dimen/card_margin_vertical</item>
         <item name="android:layout_marginStart">@dimen/card_margin_horizontal</item>
-        <item name="android:layout_marginLeft">@dimen/card_margin_horizontal</item>
         <item name="android:layout_marginEnd">@dimen/card_margin_horizontal</item>
-        <item name="android:layout_marginRight">@dimen/card_margin_horizontal</item>
-
+        <item name="cardElevation">@dimen/elevation_4dp</item>
+        <item name="cardCornerRadius">@dimen/radius_4dp</item>
     </style>
 
     <style name="RecyclerView">
