--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/main_parent_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".presentation.screen.ui.impl.main.MainActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_parent_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".presentation.screen.ui.impl.main.MainActivity">
 
     <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <View
-                android:id="@+id/main_toolbar_holder"
-                android:layout_width="match_parent"
-                android:layout_height="?actionBarSize"
-                android:background="?attr/clPrimary"/>
+            android:id="@+id/main_toolbar_holder"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:background="?attr/clPrimary" />
 
         <FrameLayout
-                android:id="@+id/main_fragment_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+            android:id="@+id/main_fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/main_add_fab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
-                android:layout_margin="@dimen/layout_16dp"
-                style="?attr/styleFab"
-                app:srcCompat="@drawable/ic_add"
-                app:useCompatPadding="false"/>
+            android:id="@+id/main_add_fab"
+            style="?attr/styleFab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/layout_16dp"
+            app:srcCompat="@drawable/ic_add"
+            app:useCompatPadding="false" />
 
     </FrameLayout>
 
+    <View
+        android:id="@+id/main_divider_view"
+        style="@style/Divider.Horizontal" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/main_menu_navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/clPrimary"
-            app:itemIconTint="@drawable/se_menu_main_item"
-            app:itemTextColor="@drawable/se_menu_main_item"
-            app:menu="@menu/activity_main"/>
+        android:id="@+id/main_menu_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/clPrimary"
+        app:itemIconTint="@drawable/se_menu_main_item"
+        app:itemTextColor="@drawable/se_menu_main_item"
+        app:menu="@menu/activity_main" />
 
 </LinearLayout>
