--- a/app/src/main/res/values/dimens_app.xml
+++ b/app/src/main/res/values/dimens_app.xml
@@ -19,6 +19,7 @@
     <dimen name="icon_16dp">16dp</dimen>
 
     <dimen name="elevation_0dp">0dp</dimen>
+    <dimen name="elevation_2dp">2dp</dimen>
     <dimen name="elevation_4dp">4dp</dimen>
     <dimen name="elevation_8dp">8dp</dimen>
 
