--- a/app/src/main/res/values/styles_element.xml
+++ b/app/src/main/res/values/styles_element.xml
@@ -6,6 +6,10 @@
         <item name="android:background">@android:color/transparent</item>
     </style>
 
+    <style name="BottomNavigationView">
+        <item name="colorControlHighlight">?attr/clAccentRipple</item>
+    </style>
+    
     <style name="Card">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
